@@ -1,5 +1,8 @@
 2005-03-18  Philippe Gerum  <rpm@xenomai.org>
 
+	* scripts/GNUmakefile.am (install-exec-local): Add post-install
+	hook.
+
 	* nucleus/shadow.c (linux_schedule_head): Following Dmitry's
 	suggestion, take the fast exit path if the current switch occurs
 	between two plain (i.e. non-shadowed) Linux threads.
